# ZTranslator

./: .gitignore  CMakeLists.txt  ColorSetting.qml  FullScreenWindow.qml  MainWindow.qml  README.md  Screenshot.qml  ZMainApplication.cpp  ZMainApplication.h  ZOcrProcess.cpp  ZOcrProcess.h  cmake_gen.bat  main.cpp  main.qml  ztranslatertool.cpp  ztranslatertool.h
3rd/: CMakeLists.txt
3rd/hotkey/: CMakeLists.txt
3rd/hotkey/QHotkey/: qhotkey.h
3rd/src/: qonlinetranslator.cpp  qonlinetranslator.h  qonlinetts.cpp  qonlinetts.h
